[fix] modal window appearance on small screens

--- a/themes/littlevit/css/layouts/front/front.layout.css
+++ b/themes/littlevit/css/layouts/front/front.layout.css
@@ -799,7 +799,7 @@ html {
 }
 
 .modal {
-  padding: 30px 0;
+  padding: 25px 0 15px;
   text-align: center;
 }
 
@@ -2162,7 +2162,7 @@ html {
   }
 
   .modal__text {
-    font-size: 14px;
+    font-size: 13px;
   }
 
   .pros__slogan {
