--- a/themes/littlevit/sass/layouts/front/blocks/_modal.scss
+++ b/themes/littlevit/sass/layouts/front/blocks/_modal.scss
@@ -1,5 +1,5 @@
 .modal {
-  padding: 30px 0;
+  padding: 25px 0 15px;
   text-align: center;
 
   @include breakpoint($md) {
@@ -23,7 +23,7 @@
     line-height: 1.5;
 
     @include breakpoint(max-width $md - 1) {
-      font-size: 14px;
+      font-size: 13px;
     }
     &--func {
       margin-top: 20px;
